# SimpleAssets

./: .eosproj  CMakeLists.txt  LICENSE  README.md  README_ES.md  README_KR.md  README_ZH.md  SimpleAssets.abi  SimpleAssets.wasm  build.sh
external_test/: unit_tests.sh
include/: SimpleAssets.hpp  backtoken.hpp
ricardian/: SimpleAssets.clauses.md  SimpleAssets.contracts.md  SimpleAssets.contracts.md.in
src/: CMakeLists.txt  SimpleAssets.cpp
